                         \ V  V /  __/ | | | (_| | |_| |
                          \_/\_/ \___|_| |_|\__,_|\__, |
                                                  |___/
                      synthesizing partners for services
                      http://service-technology.org/wendy


Version 2.4-unreleased
======================

* added target for benchmarks (execute `make bench -C tests')

Version 2.3 (21 October 2009)
=============================

* knowledge bubbles are finally sorted to avoid duplicates

* implemented first diagnosis functions: the `--diagnosis' parameter
  creates a Dot file which indicates the blacklisted markings

* removed all memory leaks

* removed parameter `--smartSendingEvent': Wendy will always use this
  technique unless `--ignoreUnreceivedMessages' is given

* renamed parameter `--receiveBeforeSend' to `--receivingBeforeSending'

Version 2.2 (16 September 2009)
===============================

* added test cases for checking synchronous communication together with
  livelock freedom and reduction rule "quit as soon as possible"
  (parameter: `--quitAsSoonAsPossible')

* added test cases to test Wendy's integration into Marlene

* no output files are created in case of uncontrollability (unless
  `--diagnose' is given)

* implemented parameter `--stats' to display information on runtime and
  memory consumption (the latter uses `ps' and does not work under Cygwin)

* `--verbose' is passed to LoLA

Version 2.1 (6 September 2009)
==============================

* fixed (known) issues concerning reduction rule "succeeding sending event"
  (parameter: `--succeedingSendingEvent')

* issues on the hidden parameter "quit as soon as possible" (parameter:
  `--quitAsSoonAsPossible') have been fixed

* implemented on-the-fly knowledge analysis

* added test case with insane nontrivial TSCC

* integrated LoLA SCCs detection within inner markings

* generated temporary files are always deleted unless the `--noClean'