@@ -1,0 +1,19 @@
+PLACE
+INTERNAL p0, p1, p2;
+INPUT x, y;
+
+INITIALMARKING p0;
+
+FINALMARKING p0; p2;
+
+TRANSITION t1
+CONSUME p0;
+PRODUCE p0;
+
+TRANSITION t2
+CONSUME p0, x;
+PRODUCE p1;
+
+TRANSITION t3
+CONSUME p1, y;
+PRODUCE p2;
