@@ -13,6 +13,10 @@ Version 2.4-unreleased
 
 * added target for benchmarks (execute `make bench -C tests')
 
+* implemented new 3-bit representation: at `T' bit is necessary to
+  correctly cope with "true"-annotated nodes - renamed `2bits' option to
+  `bits'
+
 Version 2.3 (21 October 2009)
 =============================
 
